# ragorchestrator

./: .gitignore  .secrets.baseline  .shellcheckrc  CLAUDE.md  Containerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  container.yml  security.yml
docs/: api.md  architecture.md  classifier.md  configuration.md  graph-flow.md  multipass.md  self-rag.md
ragorchestrator/: __init__.py  __main__.py  app.py  classifier.py  graph.py  multipass.py  reflection.py
ragorchestrator/tools/: __init__.py  ragpipe_tool.py  web_search_tool.py
tests/: conftest.py  test_app.py  test_classifier.py  test_graph.py  test_integration.py  test_live.py  test_reflection.py  test_tools.py
